2008-08-08 Mark Grondona <mgrondona@llnl.gov>

	* src/lib/libedac.c (edac_error_totals) : 
	  Don't memset tot before it is checked for NULL.

2008-05-30 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.14.

	* src/util/edac-ctl.1.in :
	  Clean up some language and fix typos.

	* src/etc/labels.db : 
	  Add labels for Supermicro H8DA3-2.

	* src/lib/libedac.c : 
	  Remove any newlines in EDAC DIMM labels names.

2008-02-26 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.13.

	* configure, src/etc/Makefile.am :
	  Re-run ./bootstrap.

	* src/util/edac-ctl.in : 
	  Improve quietness with --quiet option.

	* src/etc/edac.init.in : 
	  Load EDAC DIMM labels in init script.

	* src/etc/udev.rules.in, src/etc/Makefile.am, configure.ac  :
	  Remove udev rules file. Using udev rules to trigger the load
	  of EDAC DIMM labels is not reliable as the rules are triggered
	  too early on boot (and edac-ctl script may not even be availble
	  at that time.)

2008-02-08 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.12.

2008-02-08 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl.in, src/util/edac-util.8.in : 
	  Remove --load, --unload, and --driver options. 
	  These aren't needed since EDAC drivers will be 
	  automatically loaded on most current distros.

	* src/etc/driver.db : Removed.

	* src/etc/edac.init.in : Remove driver load/unload 
	  functionality which is unnecessary. Init script now does
	  nothing unless /etc/sysconfig/edac exists and sets
	  $EDAC_DRIVER (Fallback case).

	* src/etc/udev.rules.in : Add udev rules file to 
	  automatically register DIMM labels using edac-ctl
	  when an EDAC driver is loaded. (Replaces similar 
	  functionality from init script).

	* src/etc/Makefile.am, configure.ac, edac-utils.spec : 
	  Create and install udev rules.

	* configure, src/etc/Makefile.in :
	  Re-run bootstrap.

2008-01-25 Mark Grondona <mgrondona@llnl.gov>

	* src/lib/libedac.c (edac_totals_refresh) :
	  Fix unchecked return code as found by Coverity.
